Programa em estágio de teste finais

--- a/historico.html
+++ b/historico.html
@@ -113,10 +113,22 @@
       <dt><h3>Oct, 8, 2015</h3></dt>
       <dd>
         <dl>
-          <dt><b>leticiashy</b> - <em>Letícia Almeida</em></dt>
+          <dt><b>joaomarcuslf</b> - <em>João Marcus de Lemos</em></dt>
           <br>
           <dd>Commit - "Programa em estagio semi final"</dd>
           <dd>Commit - "Atualizado o Programa"</dd>
+        </dl>
+      </dd>
+      
+      <dt><h3>Oct, 15, 2015</h3></dt>
+      <dd>
+        <dl>
+          <dt><b>joaomarcuslf</b> - <em>João Marcus fe Lemos</em></dt>
+          <br>
+          <dd>Commit - "Programa foi otimizado, organizado"</dd>
+          <dd>Commit - "Manipulação de arquivo, horas e finalização do sistema"</dd>
+          <dd>Commit - "Hitórico em forma de html foi adicionado"</dd>
+          <dd>Commit - "Programa em estágio de teste finais"</dd>
         </dl>
       </dd>
     </dl>
