Programa-testado-e-aprovado.html

--- a/historico.html
+++ b/historico.html
@@ -123,7 +123,7 @@
       <dt><h3>Oct, 15, 2015</h3></dt>
       <dd>
         <dl>
-          <dt><b>joaomarcuslf</b> - <em>João Marcus fe Lemos</em></dt>
+          <dt><b>joaomarcuslf</b> - <em>João Marcus de Lemos</em></dt>
           <br>
           <dd>Commit - "Programa foi otimizado, organizado"</dd>
           <dd>Commit - "Manipulação de arquivo, horas e finalização do sistema"</dd>
