Programa testado e aprovado

--- a/historico.html
+++ b/historico.html
@@ -119,7 +119,7 @@
           <dd>Commit - "Atualizado o Programa"</dd>
         </dl>
       </dd>
-      
+
       <dt><h3>Oct, 15, 2015</h3></dt>
       <dd>
         <dl>
@@ -129,6 +129,36 @@
           <dd>Commit - "Manipulação de arquivo, horas e finalização do sistema"</dd>
           <dd>Commit - "Hitórico em forma de html foi adicionado"</dd>
           <dd>Commit - "Programa em estágio de teste finais"</dd>
+        </dl>
+      </dd>
+      <dd>
+        <dl>
+          <dt><b>leticiashy</b> - <em>Letícia Almeida</em></dt>
+          <br>
+          <dd>Commit - "Faltando-desconto.c"</dd>
+        </dl>
+      </dd>
+      <dd>
+        <dl>
+          <dt><b>joaomarcuslf</b> - <em>João Marcus de Lemos</em></dt>
+          <br>
+          <dd>Commit - "Adicionado desconto e reserva de construtora"</dd>
+          <dd>Commit - "Adicionado pastas de relatorios, contrutora e vendedores"</dd>
+          <dd>Commit - "Corrigido erro com apartamentos comprados"</dd>
+        </dl>
+      </dd>
+      <dd>
+        <dl>
+          <dt><b>leticiashy</b> - <em>Letícia Almeida</em></dt>
+          <br>
+          <dd>Commit - "Programa-testado-e-aprovado.html"</dd>
+        </dl>
+      </dd>
+      <dd>
+        <dl>
+          <dt><b>joaomarcuslf</b> - <em>João Marcus de Lemos</em></dt>
+          <br>
+          <dd>Commit - "Programa testado e aprovado"</dd>
         </dl>
       </dd>
     </dl>
