Sistema encerrado no dia 15 de Outubro de 2015

--- a/historico.html
+++ b/historico.html
@@ -159,6 +159,7 @@
           <dt><b>joaomarcuslf</b> - <em>João Marcus de Lemos</em></dt>
           <br>
           <dd>Commit - "Programa testado e aprovado"</dd>
+          <dd>Commit - "Sistema encerrado no dia 15 de Outubro de 2015"</dd>
         </dl>
       </dd>
     </dl>
